--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:usDsldwp4MJEy1p75+cewuPRWN4DcHUoJ8AU+wB2bIfBXJ4aNfCKVAxovPibWhRx3d0IFVDFjZ204849OixSrUE=,iv:bbT/CxhcnnDiGroecLhFTvKp7enErd3jXP0MLmUK4PA=,tag:6yLzu/TygjzQkbX2UamX7g==,type:comment]
-#ENC[AES256_GCM,data:y5zuKCHf1LC+4XV2nmlFFw1SIYk7R9w2WD4gmZeaEv+gbL9ZdYc+20t0hGM=,iv:tBZCGEohEOZXm3BPMxJJPSh9oXOTruaH4gZ059IFG4Y=,tag:uCyE+59dvKaJYtDY1ew1cQ==,type:comment]
-VIP: ENC[AES256_GCM,data:8qoTNrUNoC9EBJbxZA==,iv:swcl7cocPcE3/2evlk2lkkwwGbFp0JKasiV4DFJln/o=,tag:FNRjwA2xZRtaNYwA1Xqwzw==,type:str]
-#ENC[AES256_GCM,data:/kjjsLwiAdih+Rry696Y1nFyhJLHQ8taNizv,iv:QylzcqnlzGUk+m6wQIjql7+8C8ecSj1GBkpY1xuUMVo=,tag:LU5BoRB7k8rcySo85qCHHw==,type:comment]
-#ENC[AES256_GCM,data:P8T30cshmHI4eKfzJ6VmRE+0F6xHDVsb6OOTXx/dJbZFkdNdBNcDhSUbz5Nm20nczqEZf4oBtakOLslD8G03KbFYeB6FmEYDaDzWder0Gk2SqYLw0wuXw4E=,iv:JmpJuKLVAPmjTbq0QIDj0HRpPiv3xKcUKyI4ra9ILTQ=,tag:7T9WIAL02907sX2EvfCasw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:UJTm079/aU8rW8/vA0c=,iv:eebFp6ToypzTDTtlPYOIFtdBLHGbTwddqwBCpkMFo+Q=,tag:djuXCORIPznpP0sY+UlSMQ==,type:str]
-#ENC[AES256_GCM,data:y6BDSsEuQOKAV+E9QCFWOUV4OZtwCQmbYOG3iZMU5Ao+0Q==,iv:SVpWHOlkGDUHTnDW9Apk+hsTysD7c2euLaG5nE1Gmuc=,tag:hMN2t1JOHoGBBjyfyjUtlQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:s+6A+UNZJixyONMbdg==,iv:kAmkX3DEDFBi9w3KSk/0y/mENH8rZK1cZn85v8v1/1U=,tag:gxF3JLDWzyXWNsKbv+f59A==,type:str]
-#ENC[AES256_GCM,data:g7QL/4Lgg7gla5Y9kAvUoVOJH1OyiTZYtCaeEzEeo8kYrH8Qx8RoGkE8StDwJ0E=,iv:MYUnnCsl1U78IDG8KG95lWpsKsAvEOPoK8O+KM5CrEQ=,tag:sKQi72+Mph7llvKYd/fIkQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:3KWs6VSSiWPTnMvrRKCRIBtCF/ovaRP/feG0lN0dYg==,iv:6aYoD1OjbsDQ39aTusLsm+qgF1fgkprwYchiiDO0KHQ=,tag:g93VfzsM6KdiBAUeSk4DHA==,type:str]
-#ENC[AES256_GCM,data:WtnXMuCUnONkv8jyR++4onJiM/XMal4cSPuftIfQKjITKXL4pGgs1z65AhPZPQ4g/q7dC7NN74iQTDhozKFqoE+A5PkjMmpVIzp4C+EnYLIpww==,iv:nJljxr2LSOUxQSFVY+jucSktzBejdm7bfVhio+liJdM=,tag:xdoKWedrNcy+WG1L9cMnPA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:YK8MHyfueL3ar7o0/G6w,iv:98P2OINBaX2QXcKnAggEdtPaFU5xpISopWpO9ucKdTY=,tag:soWVspQcLGwSIvkDL7UYaw==,type:str]
-#ENC[AES256_GCM,data:7mlJemXi5VNa9982r9utYFHtzgG6w1p55ZYlQLP2HetA,iv:jrI7/ADP81bbpn84q2KY0w73AEvToEUJghb+dlxVPA0=,tag:iIEyMFXCZnhOcuZ+2UpjLQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:fYQjesn6fuui3X/PoX7F,iv:CKoNgQWp9adDSC6f349e7nXK7cJhanapecjEGtUmnJo=,tag:TN7sTE8YpNvlqgHrfd3tPw==,type:str]
-#ENC[AES256_GCM,data:2fQVUoetzuqBys0j33AeFli7G5TxK+q8tL7ogcm/TlN2kB/0YPOsV1VNl9PDNTHKG9jLhpQpyT6INSGZYpIZszlS4KJGdrXmZfouAgeChz4=,iv:mVZYV4C5M5XxPvVnYBKIBpo9mruMQkrrJSNEV/QKErM=,tag:VoP8Pc8JLazN44czxeqZaw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:Aeb+nYCT93Yza4rGm9Z0,iv:ZI2smTz8fUOqwQPwWfhpnbx0f/EPIJW3EIDBPhiQeFg=,tag:CioiFl1kBgVyhpgBSZDZ6g==,type:str]
-#ENC[AES256_GCM,data:De+CnY/VYagisXZwze1hDuB1+KlMuY8HYk+RFkqoSC7MrmnV59pWbcdgZeI7ecBNNOa/ZX17Hdm+OUaf+ywpCRi24zESsGCOG9LX75K4uSq2AMwbjXKp,iv:xRblsnZGxBUMVb25VExMSe9t83cs/Te4wP/n4pxtTC8=,tag:y7FEE6972iIRPvIv2Ubq6w==,type:comment]
-#ENC[AES256_GCM,data:GYAhKaJ+7TMrAbgStCy0iQHe0GWgGu1p8L43gF3xWXDdKVYMOkMP7OGLKCApJGM7fDn/ytWrbr9qgDr6WTACKapoQCbQo8vFVMOSpN35wHEWph+Nr8dW83FfkA1yfOHA5Fom+xa1K8QSG2EWEr1RqT68LF1VjcwQXXuwoQ==,iv:mUw2smQbn+JT9RpYoLcsYcNvmOQI/vRrEbAZGvq0P6Q=,tag:6h0tmvlm9J8EXnuwMApT5A==,type:comment]
-#ENC[AES256_GCM,data:pbm03RC46XnvA02NK9MjdWhOu5WAWcM4BzaTs0a2AAN5xXtIKDEdKtDpTZVZIDRDAmQfeE8gXykH9soa2HHWAZV3axwSbXdGgnxrqctGD5o=,iv:7SfcT6mUKLhMKb0bWeOsEx3gdIKums/cru11g/sek/w=,tag:F184k9SRZ+oRic5qVzbZOA==,type:comment]
-#ENC[AES256_GCM,data:x1tp2MLj0wF2kSOSveVES/bU9hwmM8NW/Dc+5AbmbnH3tf5SfZffAsxLvBzFpqiYv1x5jjX4,iv:g7GdA0XA0tyHCBZLxjrrccN6AE8F2j2nKS1EZqTvgFs=,tag:YeH4MsdZTV5WWk3e4Ep3YQ==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:LqznRt4UdFv7Uzke,iv:kWBoprNDp/U2OwH4peg5lY1fNB6dewwuPUwbaoULYYQ=,tag:TLLF3EQAtKDw92HvZ/daOA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OAbQszZgZ9WnSawU2NKMpe0=,iv:kjKHLsd8kk/OWuXQUSNzwYCcYourb5+MBdKKelOOy7E=,tag:/Le6Dax9ySyFP4rzh21qdw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:gNH+6ZDSzkjg/LO8GzlAgkH4nDTzgYKWBcHjS6ROiQo=,iv:7/SDHDQLQcL8VUSzN1fgRZwNj0+JaEO/eL9DnEZq8AM=,tag:CBV6o/1jX2JlKnc2eEe1rQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:HP9+HMPsrpTn0m/csaDbPQQw5HWThcxbaPa/QXTxorzyzrmxMJKlmg==,iv:HbgugvbWrkWbyt2LPlrF7Nam/xpkE5zID4jaU9X1NiQ=,tag:TiLNYF16j8h04GgHvTWlGw==,type:str]
-#ENC[AES256_GCM,data:sbP9/g/vckfVUQIJ9fJl+t0W3Tuw2S27XkTA2AegoAOi3WyZhbNUIInN1/OceMN1rLlRlr+yq7Nyd1RW4xKlOA==,iv:LyJrsJB99Dkc3NgU+2f7vOje6r/3i36jnN5kZQtoOyc=,tag:wnSFiCXUw0XWgoPGGWDHUw==,type:comment]
-#ENC[AES256_GCM,data:t3Ootg7oc7NjC72HuANHeNB2Bxe9cb6nTGKaoBJsmHKdh9BWfVP1d+SSjpT/3zkPKvuQ3I6kaEE=,iv:otBArOJ9qPwVnHI78HLWv06B+vP8qJA1W12Ql9ONAQ4=,tag:SRna/AMULgH9NyjJC8+v6w==,type:comment]
-#ENC[AES256_GCM,data:YBlsQljM+sCS1dihYOcP/f9eLiun3v3DEA==,iv:1WI97oEVwRcm0ogrQ5IDn1u0lL34tMp9dvnwnMl9Txc=,tag:hixhSEzQDMLN+m3+2oT7zw==,type:comment]
-#ENC[AES256_GCM,data:CMEs1vWSyRzSOmkvs/kIAbmkzeOysRrnfJTsH+6qyInSfUezbLrkU9IV7RyZtj/DR4OZBPmsRvoGa6rR+BR/HXbfdVoEx1HwMPOPo0A=,iv:DbSuz01yZclmuF66587So3fCP+ffUx6CWsLdHW8VY0M=,tag:tXlwen+MfiZuEyEhqS5F9A==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:G9xrVZfqjw/BLALe0AISBNUAJtU8M0Ke/4W/PoI6PPDWCt1Jc3XZ/VnY6+uDalr9,iv:rQXNWb6TV5LIR3u46vKqY7kAM4w5PlqDfookk81wRW8=,tag:uic0hO0y5smOi/oE0ge/YQ==,type:str]
-#ENC[AES256_GCM,data:xIq/ZuCgJGy0NSu4HHNXWpvspzsKFdA88VeDMcMV2u77xaxhu2FY7vMeNC9AJ/O120VgPCer2na3SudSV7fZCfnm94dnfNE=,iv:+jVUehZn7JXUJCpeNS/5YP3soJOLOfXmeVy6RYIGMKc=,tag:o1xXZOX6taNuUiEKyGL02Q==,type:comment]
-#ENC[AES256_GCM,data:ddEijYbBSSNgpOpgouu1Pb20wFn9DE0Zc/SG5xtd8z/GnLzbV3k6JccYAhPump1+15yi8P9w,iv:9km8xTFvfBSbk3XCoBaLlgzDT2BHp+elqQkFp4N1M2E=,tag:iYTLlZQ+JsCzey7dQcE+vg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:xt2Xvr80gw==,iv:S53UQTvh1XMr56WE6MDMC6kqLEUPuAbwvVsQeS2ZMMI=,tag:tElOwLc6fZsAvxNiwSYwZg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:syRkTv9uCTLTw5NRuQ1q0fqnFDM=,iv:+kPjR43ud/5cNoA9fDYnRTo7dp2jQZkKYLLsO961ekk=,tag:YnqppES4wABTldGbwUn4og==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:W9vRhASVWmuvVZo=,iv:RvntQa/6Z+6Xap7jUwqa9sVOie8t+WgZDQgs5GyGoPw=,tag:4KyCRZ2b0yngY0ykGfbCEQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:2Esue7IB8d2vKE1+2Jgr,iv:/2xWSOzOp5sGj9WL9umTEgx7vWfXKrDqectEkIUhNHo=,tag:94UD859Y/CxE9UTgE/o5aA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:+ZdPQiiAToJ4z9/JgzKZjdyoALTShTIRRA==,iv:9KF/jmkVc3ls9zfUF8OHcVGucfxO+0GQS4FdvhwUf3w=,tag:v7Pn0LFwER9EbOSb0cwS2g==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:8bINZ2yd7BhXZjHpkK2X2GrOSOvKzp3VV8BgkJNf1Q==,iv:MTqOSfx3WtwLGtobF16kP7N9KGtyPAaTDKe1+kvACVU=,tag:Yy1Ro8F8ck5JIrmhKUlSRA==,type:str]
-#ENC[AES256_GCM,data:XongrzZBI23rMr/bGBEXHEclUDgf04sYp4zM6Wsoptod2dF5fF8=,iv:huV7a7ifA0toyTwGNvyHvInzbbubhORkQUmP4AGeJAI=,tag:sH7WkHbGn+vQ84aMjo5LFQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:aWq/cosIMQ5hJODeJ9u4Sg8MMWs=,iv:4HOGu4Gm1s6AveauyI7xeL5bAaTIuJ5BoJr2zr5Bjmo=,tag:1wIhfR45HA2rzZ7e7PwmFw==,type:str]
-#ENC[AES256_GCM,data:Rpz7JCZKaFmtkCz39+k=,iv:xiGdEDw3bcr0f61hfN/+PRWP7u9fETS7R5YH75nEp9w=,tag:dJGCY4L0JvSAvPr3KkwUDQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:G20+dQefBanBqmYzCQ==,iv:e9sIbqtEqACUgeXzlcWjPH7mwF37A0i1pDo34/+fUOs=,tag:E1moAmOBBgVNlx4yVj55xw==,type:str]
-SVCNET: ENC[AES256_GCM,data:C3XWBEoyNTIFb+zNlQ==,iv:BB+xK1UJHi/1wkN9efXIUh3fZj08Be83JUgx2gF1ueU=,tag:O3/by08OiMnM8vLKop9QXQ==,type:str]
+#ENC[AES256_GCM,data:umOB8VngIOXIv5jMJA2PRWlwzfB+dk0tFABZUCGPXg+J8rXVMGflT6Ygy99p1gCZypJ8Hu+oMzwrJB6ovHZ2WHs=,iv:ox4PNvG6Hx6SrtMxMJ+hM+cL0zmGvB8UQizh9ZdYtUg=,tag:IuUyc6kC75nGgZL8rruiMw==,type:comment]
+#ENC[AES256_GCM,data:2kZcCfKGiPaHD1jy+omqnC6FevK/U8mhMmZDLCX+rCAGjvaV/vuMO12KN20=,iv:y3XS+1zh7OuwyVfzDyByVpMtVZ4lN6Ndl8/EuZAiw+A=,tag:pF+Aee9srtjPFybw+3X7zA==,type:comment]
+VIP: ENC[AES256_GCM,data:zT2TePCXWs67uUT2xA==,iv:3gXLP0G4cUHzyIxexsrWy2h7mOHzj97e1QAkq7tvLPM=,tag:ADs3Q2qUlYT8ZUPSbD0frg==,type:str]
+#ENC[AES256_GCM,data:bOHMOwG821hdMFWjWy+vixmuV4F1oQzb8la8,iv:8PZDUL/jHsg2wDmFTyDBmssTLumIobnp45xkOHIhnCw=,tag:AH8P89Lj8ilmi0m+JkkV2w==,type:comment]
+#ENC[AES256_GCM,data:tjvrPPmEo1I0SJIwg5NG3DkW3diauAzH1f4aN6x2WX/JZaKnrT3EXQxAQimSZ4bQ6xSqbyE+UYH9On9IleMxEglcG8DDdtHY+Hk5D5eTR6s0kTMGZFD55c4=,iv:e4gPhdBxaO00SGU/PsCzVFB4ar9AAmWEG2v/g5cAmW4=,tag:chWqrD8YmB8dCfZV5ktj4A==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:bJgh3FQemVniIfJ5bPg=,iv:9ob+LiLWkERs+46l+UoXtCKd/9zpU2O3WLYx8YOQ1aM=,tag:HOd9WsC2Z66CtWX57Eos0w==,type:str]
+#ENC[AES256_GCM,data:5wHrHsVSoyB88u+wVpzqKD/XkEOxd8i25hD48PaTL1aAsw==,iv:POzd+w07y4ijc/HJuLq2fmGaB6Tv9+QzXMECm4ZsyhY=,tag:Xm8IA47pJgZDJNi4r0qBBw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:JAASwZ+Kjs4CV6mHww==,iv:ncDtpAI90qZJ5ZVMtISoqNgO42GfFdRuZOV3PD5AVJo=,tag:JKXgAq2eiu5vjpEv8fhzHw==,type:str]
+#ENC[AES256_GCM,data:GF/q0aIV1f2f6J09CyPO0hoGADaMSSNXj1f5W8txy3qYHqFkdRVLlKu/a80Q0/8=,iv:SAqDOHw+5Bx1QDdBs3lo6mBBEXZtjNW222ujgGlhQrw=,tag:HMOa1fTX3BRIzZgR2SedKA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:6xY9mw1QYYTNpkI/qsr9+nPIYroVCRWTFGi4zNEVIA==,iv:KS4OCTWWro6g7QmJxSA7q5BTkpniA7mlGD9V3ObxRuw=,tag:8fA2fPC//niLn2zumea6Eg==,type:str]
+#ENC[AES256_GCM,data:Cqzk/B6745yoygzb3Pt2IAnBbeWLZNyBgUOUa8l3/V2zhmU7Hd3Rq5uwIlUbfsup4/76rOf5CnRdfmuTrwIN6F9m5A5fnXbUwkahQgsXuFtFcA==,iv:tFb9R20hthSaByq/B1OHMePeYtJDUM6FbV3ar9fQYdA=,tag:E5vnXBmOKAUyPOOQ8AHT8g==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:i5aLd7gA0z/MOZktQ6dR,iv:oewb7KdA5QePkNX5Uke/gyosyUvYJXfrVOPC5CPgvkk=,tag:JdUwlq4Mxw6DF6WN/ZhArg==,type:str]
+#ENC[AES256_GCM,data:MUHMQDO67QYx7ssI/LJgsxHWbVgPZ+RgEGfomb+HbGen,iv:nNfe6PeY8Vkf80UvC2oangYhHVNMgYtQayYZ6et6hJY=,tag:HMIS4OWazrHtIOdI1pMFKg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:/8lSwR9fOd7DtT29vEO1,iv:/Jg2gvZeVEYcCgfG9vDXWMG++omeDKnJ3tXPr/ZQQik=,tag:62gxp0/1ELRzYSvdfdygiQ==,type:str]
+#ENC[AES256_GCM,data:8OGksxtzHUdDvWjG8spY/z7a9GUk0wilKGWBZHYEPR3O7Ypfl4rz/V8TyiH/zPiOGgX1HYp3OZZAQZUdtZ4mAGnyijCYbRSyf3Jw57llLIw=,iv:NNtrZfJMPx8m20vTd1RZ+vCHTgTQvQE8BPp4kxMQxmw=,tag:0X99Njnns6cXnSK6sNBCRg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:ec7Ni4/mVYKgemWYVvls,iv:kA4oklJtw/5s1O4Fr5xNlrn/4dZILos15uEN8vZ3x4c=,tag:gJZbOUEjpWkimJQSlXaLBg==,type:str]
+#ENC[AES256_GCM,data:m91PNWbrrM5qHwJGqgbaa+cWIvKmw0TywYoDFUlP6xSwnlDvpO/06lWmxniaM4Z9St1+HSpKbfWXiocBbjxXtAaVZHXfuoy4xulXSSykjdb//Y16tb/o,iv:R0sCvsqNs8ISPbVXLe+XZeGuEg2WrBKFA9wTwlxNA2w=,tag:JRPEbVLSEI8vL5Q8nKLk8A==,type:comment]
+#ENC[AES256_GCM,data:26auLygj4NjYeGYCX66Setp+eWh3O0DPmYOKgLNOzDUx9VYeL8DwFIKAwS9qHyjHrs+6QK6Wcd/+nj4vgCNZVG2RsGf2LNX92VDqsOP0WLULjh2p7S1vvrIdmWffwrOfA421Nf6XdJUC1nuyFvLox4Fc91F2G9l32ZmfDg==,iv:4KWoxlEcLCZIYQlYaMJ1AwShAY/1877zzbrbD8aWNgc=,tag:ln7Zns+1RAwZJjBJz4/a7g==,type:comment]
+#ENC[AES256_GCM,data:2EEUp3Psido1rJOcd/Pp81PMYlUWMGIRo8KUVqYR2Wo3koBvhArRbZgia2u1c/ltkM08W3bOC3ZNIdZ1vvCnGa7BLzVUdvmRCyXxOYVZBSI=,iv:okHbh4IRPOZJtQ/HTga/qUD43/qKWO4BsTW117kt0MI=,tag:oUXq68JWZAbPrbcBRnG84A==,type:comment]
+#ENC[AES256_GCM,data:zsrOu9m7+B/2QWRPqjOUjkAk7RZ6dE1E9kfyE2rF5hKatyOlpjK7Hvs4yWMFcVLSWInUqhbF,iv:8gZjQ8x+/mu2dg//bAM+0kyuirRnmjWNp8PPs5MwVa8=,tag:HUMvAXP42aAMji3fOqHVZA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:a+3pxrigRccurNyd,iv:dakaMHMK8wtr3jtbmJQvz8ge7p3tKTXeKBWlZPQnRkA=,tag:3f43I3sndFwdCv7hSt5u+g==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ahCZdNoWsX2dUzsQK2bRzxU=,iv:N/u3DFPWpCoT3NWxKEnipbfgiQm1ef2FoytH/yosTnM=,tag:/rtY9QSokWG7Tmihij6+ag==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:MZ7gv3VWJuRSxOW960dMawgBC5sZ68P+qRqJUthZHyg=,iv:fr3UEsbeUu3g0Bs7xCRbdlbr5PR6MoS/y9zEkd/A8iM=,tag:4BeG3/dVgpUle4XjkySFKQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:DYDryMK4/m/KZ2dIaI7OBO0mRJOSbxbbKrem+VWXZOFLKHJi7OEw7Q==,iv:EiSal6o+j9NjH2vRONfNIL5JuEnhXBUxdR47l1qNmgs=,tag:jYmuPfECK5Kd5ak2OYTQxw==,type:str]
+#ENC[AES256_GCM,data:WuzzREzrGLE3tK3OBXzzL4Xkyh/hwOjTrjksFQ3gUEDuS/2V1m/Q8rZ1AQtqPTBsSj8vW8yQW9MjeoFgU6Lmjg==,iv:zn79VryJEsG6iFNho5mV4abWiYOPgB40vqHUsUckhjo=,tag:gUeRpP8vKr1PyuSa5WuMhg==,type:comment]
+#ENC[AES256_GCM,data:vryf+S+qxjG5+VhYz8nG/W/Emtvdn3VhTeIxfbOrTNCqSLOIz2beEo+SgVxHM5uGhgeD3kLoVhU=,iv:8QrS75J8fYaDM38hwMYVesZViOXCUZJ5GHufpz+Z0pU=,tag:0/YGbQnwVPfDtxRkDoOxXQ==,type:comment]
+#ENC[AES256_GCM,data:D0ClOHL04LxMAgYagMnmHHe0Xq/ML+8O8w==,iv:bVK7tKQQukWcjwn5vYKJXeOau72p4p1QyTfpOykyOmI=,tag:P6tgjXjbpzeoKHzNm/h/rw==,type:comment]
+#ENC[AES256_GCM,data:b6X3dySZCJndnFP4BMrXvnSlOiATcorfAzO/LRLWow5SQMMBE/2DgEajkv3oCJeY4ubcHNnWkOTkUfXrVlvSt/yT3w0JRNK05nMl9P8=,iv:4sGh7Nh3vCOxUFuNfFTmL7K6ZBV8E0PeFmFfCBr3dJE=,tag:kvJaRfhxAGl2U9eeVwSetw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:Oo3FIC5r0DYRC+5ntZOzW+BYVyh1nv5C9V2ozzmjU0VTX55ceyA/a0kY8ym1jbEI,iv:xA4zZ/bQyInYlvsvgfiN8C6myOCWgMVbe4g3F6voPhA=,tag:UVmoy1Vp0SGfG5W6P8H7mg==,type:str]
+#ENC[AES256_GCM,data:VJAoJ6ESial39cH/yuCt5bRglgQdGE2+nq9WJrBMRxHLdaclMT8BQHlEzuz9IyXNxvlfrJA49tF0KQ150qlgTn03r9iRRa0=,iv:LJi9qjZCO4dLD6Y0BwOvoBxM9C59Bh3GAebDRe3SP+I=,tag:Dxu8ARex78Fafjw3SXRVpg==,type:comment]
+#ENC[AES256_GCM,data:43HAoEhyczLv3bETbV4v6xkoznkdke74ZTdPejNF0Vt6ORwuVzIzqDJ5gJp/g/+V1SyqK1Bx,iv:TeqpWV0ZexTnLVGoc8fNfk5uvXXDwKieo9dFZQMIHjc=,tag:bdigi3h4chfEz6ogSs3TbQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:rOEmr+Ph5Q==,iv:FHJzQU55m34+qMebCrbySKRh/WAyafAei6CuBcb4Z68=,tag:ow3OkuRuVYZIA+2PudxWyA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0IKmIjV5gGChzJZdyMG3a28m5dA=,iv:MemrJUiAR7HInkHBEUtf1I3mX3XSrvum/+t+MTit4SE=,tag:A/sWFIZ5a+ls3IodEkIr0A==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:JjiMMLv6j1lUqBw=,iv:v3C06EJJrozZSmVGX9+/SH28IDU5fNZ0UeB3xJYv4PY=,tag:/I4thU4t+VUyVrCnmJcepQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:uOBPZlMTOvkl70rSWMlM,iv:8mQvpFTm1P+ysBd/yrv6P0vYe07N1O7IbvGUU/95+lc=,tag:s69n9mbjH31U5a8muHzRFQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OL/3Y2J8zPtiB6l4AsMqD7VFD5zZrXw5Ag==,iv:wJukPbZdUp4ayrsj5VcnFfchx7N2MDDlpoKExXdKHDg=,tag:DaBbKKxzAfwYCZmA6VJGng==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:7PybC6UqL2T8yNZrab6X+++/gOpCiJJUuUyAh1OtJw==,iv:vUdkUTg8hWZYBCYN3mgiNtLwti6a9xAcORlpJiXITpY=,tag:8iI+X+hyVihJZtQ12tkzAA==,type:str]
+#ENC[AES256_GCM,data:fy3TPCgKM48X7CJMyiPhrXRf6j1gLi6UO8IIjm/AWvqI/VO4P+8=,iv:arZu2xzL6gyZvuHKt/TBfoey5+/G9w2dmJBqwyAGWqc=,tag:FewDujszgJvwE/+W5jGMLQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:y5fVNhTOVXJqG71ajO7FkEIIR8M=,iv:n2hjIyuWiETCB514ODU8uXY6poz7ZB24Wxs3Diwk/NY=,tag:NRyYZQeW/TNFrWiHS6jkKw==,type:str]
+#ENC[AES256_GCM,data:mfgNGDuTVLF5EHf4nPA=,iv:qKgnl/Q02H6PRYvlsueyOdBIAuIcSxdRKy/1hLZKmK4=,tag:qnnRO1u3jgG0Ba37ZVKzoQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:OGRvaVF7zbYK6FhJQQ==,iv:eLEaDIcVj3F4llzDYDzgx9ZezbPPCj7ji/0ZyWxAQQ4=,tag:GcuKyqPu64NJO+PQXZysPA==,type:str]
+SVCNET: ENC[AES256_GCM,data:Nj9AOxpcLPe2ABxvIQ==,iv:Tzi5n8m5/4RzkM1EO2YIU1QfwJccDTnKkWr6OQy5wIM=,tag:fAxiNCl9xej5Wm2tUHhpdw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhUlRRM1U5Qi9BdVdBTVg0
-            d0pNY25YNE9HeGtNMHppMXJsbXNBcXBySXcwCldhRTJvOU1DQTZmcUg3R0RkcHYw
-            RnZVQU1YS2NZSzBJMUxaUE4zZ1BrbVUKLS0tIHNlK05oczZ2RVVCd252dUkzeit4
-            NzF4dkxHUjZBUHZsVHk4azc2cGpaREkKwOeMs5z50NibSZ824LDkCbXdQ1PE88s9
-            WNpUPNA2jqPRnhn3Mxig+eTbWdTrtk6UD7obxdP3r3ibfbKM4lFFTA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIUWRhUzQ3dDRtTm90dkFi
+            dnM0dnRndnlvNWlISmo2eGpUQkd0ZExGcWkwCnBydFFmRmc4V0RkYVVZcnlyTE9Q
+            NFE1dnlPZWcwRnFHNEFUcVdXSkl3bEEKLS0tIDFkN1NZckRtT1B3SjJobW03Qi9p
+            Z0VKYXRWQy9ubWE1bTZXVXlrMkhwRVUKrxlUl6diOk6vcvDWrSa7ZbDGMV6/5Y/u
+            Xie4loDYHXM7060g2PB/oZLlOnZnxAzUAa/2BMZwyJcYyvjeVWNsyQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-29T21:53:36Z"
-    mac: ENC[AES256_GCM,data:UTVsu2dTSndRI5k6bLseFyRuXSOqCN6PDCUThLGDgR2QjUsFoOoEqGWPZilTNuN8ehWHCLQd1ox9MBxr/xFtV1DTW23Gs94mzq+/XeMW6n2+Tkna7TZvvOOM+kU86yjDsT4sESoCwsdOVQKCEWXDlDjwhoH6GokQpRBJ7wZMwmo=,iv:fxkKU3SLwve1bzT03D2Gee4VUyxqm2CP47p15/qVzcY=,tag:+JFXqVnppq+cp6ZoX19cxw==,type:str]
+    lastmodified: "2025-03-29T22:02:25Z"
+    mac: ENC[AES256_GCM,data:HIdWOQPA1+GDle2cfGRJn7e1dqi4OeSTyeZf1lJJRtrYhZ3OOxix06WH886FoNrSQ/21+ymfRTI0EQFYBNPyoJqlro0uvTktKEKHU3rxSn/Zgw/fmg++IQnHc2j6A1+i3mKdE7fFj8MA0nEJyEOsx4dGobunROIijZ4oWUqpTWM=,iv:vuIgZV2WA2l+nNHcD9niLinIctOQ1/07XYMgDWZdlz8=,tag:CNQ59g+aAs1sR0ynJ9tqaA==,type:str]
     pgp: []
     version: 3.9.4
