--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:9XoX7wYZwXQvASMS6ayl39j/8Hjul38YpNfwqDeQzRJIDWFp0tYv2zEoNneu1Yjw968X2Ahz5ngrLMysiOGT89c=,iv:9d+4RE2zJrIIt7vkxKdTFNIKiEG8j5mp1Mo2pXM0WUI=,tag:W2JJKIVpZaP3Je1+/JSSdg==,type:comment]
-    #ENC[AES256_GCM,data:Fdl4XPfFKRVAYHxqf15CT+2HQlXwyLmtsxJXvpdFC4rE/kuHa34qCxCcLpA=,iv:wJjbBaQi6rqvzGUcvG5C7r4pytWa9HxcXm9we/fw7nw=,tag:0ItQqmqs7msOk13toAft3Q==,type:comment]
-    VIP: ENC[AES256_GCM,data:URnfajFopxxTpEnPRg==,iv:eMqoFOQK3Ip0bOYpNPVnuAlMubh1z1Dfj4KKxwa9P7Q=,tag:ZKypiOSwbSGAkLo93fl5wQ==,type:str]
-    #ENC[AES256_GCM,data:PyDJ1UxdIGdNgv2QLA1aSn0aPdS43VAH3RIt,iv:fc+9mRJLJJ4wAA0kParGjrgdGHkx73dPXro+OcV1Woc=,tag:Sze+5wmWvNK2lYxCPQlN9A==,type:comment]
-    #ENC[AES256_GCM,data:Z8AfNUJ/KYnCbrEOx7+3MUpIpcLqvUhOKd7HHI94OaFXoiBPP6INd9uuUM/Q7hETZwsaghjhzw/etQxEF081eIRePpUfGV6bHwKB4wA4pQ/DmebkWcBQmlo=,iv:1jQW//8aBeRd/NR+q38E66GF8ztNXGyqs6pUDyTMi6w=,tag:J6GEfzhhIau8ywfrFg20EQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:YfIXGz3Rugglyl3zdi8=,iv:pRpfqFVytRHZ6ehHe5+osD/hukz1CvClLi37CpAoqYc=,tag:jRukM38MpiOikXRmDJFGXQ==,type:str]
-    #ENC[AES256_GCM,data:SsHpRSI7e5JprazKqDjB7wZ/71lgvKIu3uobTUbECdlJcQ==,iv:Pyz6eBKIcBHhbSs8ZuG5NpKrDeFbrbXXuWLAyLJ/n5M=,tag:0ANu0nDBza/rIY/TuUbnCQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:DmtYEkHr2BzOj1KlWg==,iv:PrVW58f2XdMJinPBmvmkAAeJ4hcm5W9qAscxdouVuag=,tag:XwC4czmgQTV5L/UWbFNR0g==,type:str]
-    #ENC[AES256_GCM,data:30eKzBNYlDqD/Qzu2amIc3hz4XN70Y+vwVBbrrrTIqh02KvzY7ANOZFZsWFgMFA=,iv:2M3AW57NCdTYysvQLDF/3C3stV4a3k5hp61tS2QkArY=,tag:yY7569SH+5cmbTenZnjQJA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:p17OynO6TDOyGKO1mduoH+8RrOVKc0VDh1g24atOdw==,iv:HUW9aaSK/p/SFUFk2dq0jhfSnO/MuqfeTTH0kMa0M68=,tag:h7dYqjFHXoKgBBSC/K99iA==,type:str]
-    #ENC[AES256_GCM,data:950qCae0Ml9C7LEa2rVq4m+Tljw9x6NMQIaOF5c1MSM8ubx6zjmbICgbp7LMVHXhZO2wfazU9B5Oxr5JinjpkdmMrc0W6ZcadtayUPpj3q0FHQ==,iv:XzqwbXoWR44jzEXHaVpHcwXDBbNf3H9OhcnQ2CpAu70=,tag:03D1KdayxdJGc+gJyP5oKg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:IiqMojOu8PHrJaQGP06e,iv:2wsVvN0Bhp3YfNsr/w7Mt9HoYlKDKX6MI4ehZXlvG24=,tag:XSVXIPova6yae6zv1LnYrw==,type:str]
-    #ENC[AES256_GCM,data:MSNlfF8OWd1r1LhHoONydgWVyFZVZVUaBd8W5/6/u0uJ,iv:L2NrD5EgrYCVcQYtA3gpXGfQ1WEsoKrIhQjDvFpRRGU=,tag:wD5+Zq3wf/pzT2YqDgJBDw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:Hly7F7DsVTHfNjpTYNOj,iv:hjz1japhNP3KQh/SCW5sfFSc4erIAfcKqe/PRhH6Cts=,tag:t1lV2iryZ+ViPThOqdAtHw==,type:str]
-    #ENC[AES256_GCM,data:9d0orgNKBWndf72eg71Wy4bXj64IsnAs8kzirzetZpBkuhykFvwICBKgOT0tHGsuBiigLEM6GlwFM48AB4O2l2HhJ5xuosHsSAMFkI3XFxE=,iv:YyHHyeHt87GSm2TEsUR16yJPyGD5Z3GqwRDs59c2qvk=,tag:j2asPdBYGesCwvs2YP4QMg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:dgjOHTw9iNlOaqVRxYOQ,iv:/eukevBOy+mi8uNNf7C2/iniAuAVNoGfYKJlXzsInt0=,tag:GD0joSE8lHG/g01Bdh5jtQ==,type:str]
-    #ENC[AES256_GCM,data:GonXejkHnniJcHWVDV8/6J5HU2j0c30jAR+jXn3xEq5z/os5WUNB0iLCff9Sx8NPJ6AuY93Zbn+LnLtrVIkL7pSFVz2iG2nv6qOlDF9ZgaSKQhJs3Oao,iv:6IDdQy2em830uxxHCD9Pi9m12I1I+BkKKEfORbTgiSc=,tag:MPKW2P57zjLc/OWaYY1Pbw==,type:comment]
-    #ENC[AES256_GCM,data:bTssPi49n7Q2NfEBJ35vgOSAhKqAM7+fOohdepKST9pzATT3MtGnqxOepSnuBC1/aAjzUj/Chit8zsbs8hawOQz3SZg9MUtHLjFblICbIKYONkrnpUCqBhcPtccQfotqVzIfF7NmcTU5GSWoN87S4VPlhaU8Ky9CYjnk7A==,iv:RCS0S1/EdqbZpRoIsoWwDZKgL9rEYfsarcbjYGoBcU0=,tag:BnebJceSwqm79DXDiXDshg==,type:comment]
-    #ENC[AES256_GCM,data:CJyI4H1oc9pN790xoBCoakcI8u6lPzu4ScgUAzdk/a1r3gVLyHkORXQZtoQCaJz72BN8w1lj+ScZ4auMkc83mNSLVc6z8b7rASltYQuiUx4=,iv:4ZQR/u0giP0u+xhTH4OwUflvmHrZ5ZSX+VFrIDpCif0=,tag:H1fhSDPEToxEVmJC8vOPLQ==,type:comment]
-    #ENC[AES256_GCM,data:0lnevE2AP/Lue302bt+EZiX3ON3Uz4LyQHGqjOT2Un8Uj0WXnUzFhKcnZb4FZEcQkfrnC3T3,iv:IB9z+4VJCkmqBOybkxZhIR4jMxzkxyGwk3cZ4cDYcs4=,tag:ouCCOHSFEn2myKrIr/1Nlw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:CaSLy49Iu/RDcFgI,iv:oqEDnVK2/js9TxSjL6rC/sFp/VfP7TrwyOib1Of3O9I=,tag:kz37sdgyAkkPDPf6pEygfg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Kr/Ob1Pu8Kweelj14L+9hOE=,iv:V+7KAbAtKnaP+Mm4uwqK1LF+2Ysrdoe4AQ6B0tmYpog=,tag:Fg+CvoXi/4mCBKl4AzPlbQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:Ulnyh2YWRMJQ4BRD/NRgkXN81BQt+VAHttqrT6tQWVg=,iv:YSwpGxrrJ5H96TAz4pM8Nrh2C/Lij4tcvBacuQeGzmE=,tag:X7xyfr8ObW07yQFhVsrElw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:/5cZaGQk1N1PIHn51EQzzVDVekeo0a9Sgk+rqxs40EnG1YjcDV9uag==,iv:gVfk4L37Mz4JE5vgrctjl2taSqcZZ/2bMHMO0jf5Hn8=,tag:qA9Bs9eACtnH5HaLU3TLZg==,type:str]
-    #ENC[AES256_GCM,data:h6b3GyCTBxNh1GYejMrLR0JO56su3lJV+zNPdkthD28VjaBDu7kStc8McAmRi6Z97FlyH3y/TT4ngfTMlcw48g==,iv:fVBTJcdxBPAX8Y0mY4LoLo/1YeKVEBgeracoMUiRY30=,tag:zum82daetN+1VErJbDBB+g==,type:comment]
-    #ENC[AES256_GCM,data:u4hKzKP9PlSwy1ioF2f2PvDnd7fmuHpjjOsD5e0vLNOli9iQYNSRFXePO0GXIKiZd+T/Ktt7jSw=,iv:ulnNN07HWrHf+x2DuJaoR2c4MePY2QkHsOqI8p0+Yss=,tag:PM8V9jmWccjfzfdPqOHD0g==,type:comment]
-    #ENC[AES256_GCM,data:9b86u1nD8FAlIWyP+YA8wsypt9nCQ1M8LA==,iv:S5c5Vno070OEJyiw91HivRngbBKRM8rnE9HADKMsgs8=,tag:4/SpqsisFhIrbsw3jfu5pQ==,type:comment]
-    #ENC[AES256_GCM,data:+RPnAtCo2a4PsoluEUXPAAio2TDSldStYMAVoVkmgzdZknZ9JQnWS9N91QKaBpUe7e80MiTr+IuaLCaK0+xhljs2f4xyh4li/StKtS4=,iv:O2DQMEI1q7dmhhNTz6CBOnUXRQztLQtmU1IT/5wpAnE=,tag:oGcX6OKWLXmOF7RplAHPNg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:mRByIGYMxV844FPZR5QZPDQ3i3tMm5ZGe0aB7ADB4/buol5l+5MpCmorLSBoTKQa,iv:Oa4QRgDE+vxK0sqQKs0G1C9yUCIJlD6nWK3j8ILJ+zo=,tag:HrJchw8E9assyYunwXs6qA==,type:str]
-    #ENC[AES256_GCM,data:v9ldElqaosq07ti3BOtZxZ3AEDuSoRTt2T+0CQd7vrsYW1zgevHVAQcE5iZJCXXOx7T1nmqdy5wkj1slMpTUbxR8TPhq2Rk=,iv:gZJ180UY0MS0MdFWRPubHntMNgWY/eARADBLFtvCfCA=,tag:xtOILB/oegaCVN888303aQ==,type:comment]
-    #ENC[AES256_GCM,data:jZq2PHPApOUHPpes5jwqUHplwGqX4V5jI6Y1f21OUyP6UP8bONJ2DzYJhgVXKLFZe5x2dP1K,iv:836+Om9r1H5Z3J3wrx/s7n6EBOhMElSGJ4YiQkM+iNE=,tag:CwGbxZ4GC2mbDpvxTccRzQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:SoBZ2+yhtA==,iv:86IoAg4e4/DY7vGuLJkTI+ftso9q48nO9/RqQFEWCIQ=,tag:i47feDvoCWbEjJ1yYIioaA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:KrAPV5O0uOJygG+MkTc/Ax9UcUI=,iv:4oL7ZX5IphE98fZKHIItSXlLEzCAH/gOuTrQhlVWjbQ=,tag:n2oVmDMUzJ4y5OTUXN7VAA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:q3xyXXtxfnsT7lg=,iv:ExRP7qbDHUzXAQ/uFrT5t3dEnk+zFLbbPs3Z4QV6azY=,tag:TboM4iUGixxl+03ViCrjDQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:e+Uis9DMWgfWKiPLYTXh,iv:zC7bJNhRUjyvOd4/k2y7m3/vL1wRfzVlCXN3ixDvhSs=,tag:vIQxAA330taOWmkJcAj6Gg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:+wJ3XleIOyBlTnIhZzmelKIar9NNuwylRQ==,iv:hjzl2a61yTOzLRXNIxBRdbuMl9cQzJWA3ATMgBiEDUI=,tag:mu7suP5r6afiZpekmunh+w==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Ib0qCBR+LWlVYqF471Yhd+zR6yMF62wsl+3IfrH6CA==,iv:b0peyVkGE4l+LoI5XbZMK+1oKxLYSwa/tP1Rzwc5rz4=,tag:6WiwubnbXn92x9t1qRrUaw==,type:str]
-    #ENC[AES256_GCM,data:lm385dqCzl1FaoJbfZAA00fSZCu/SocDCW7D30opT8iX1bst6eA=,iv:q3cRshB576agweqHFrCSBZZQJy38BO22PU5MMi4vb+U=,tag:2RuHey9VeZDPw6zRLzqnyg==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:wDbUcJpNdlcgF0VwHDoIUt50SFk=,iv:VQ6rZdPNPEz4+1NoKsfIg7+NpMDVueTiFf96YBlq/GY=,tag:O2dQxieKXpKiflopbDQ+vQ==,type:str]
-    #ENC[AES256_GCM,data:98/xuBSE1uTHEOzV2Cs=,iv:AFZTyL4AwiGkCPOKLKbkQggsTaZNYPZPpQfcDctbsQ8=,tag:t/q+5SmrYtQ21ba+7yyH8Q==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Q6mmOJv65v+vqMCU3g==,iv:qrNU6WhlW8KUrY/xrUIW7NV6+K+mqIAG4i66k/pTJaE=,tag:yPzVfA9bgnExnfy6JMJ/ag==,type:str]
-    SVCNET: ENC[AES256_GCM,data:JGGtposDPp5rVlYfGw==,iv:GmUCckR3b/bo6xRfSDTtImmY/0UOb9OPNjQNjol2jKY=,tag:YbpoZ3JMdqJkpovbRaRSyg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:YwmJ7g==,iv:POreoGyjt/qN6i4UuQsuVOluBGOZUcyBsrIPkhFOnZA=,tag:Hh39w6kv5VXPvCJe8ljxIw==,type:str]
+    #ENC[AES256_GCM,data:hDjoDGzS90A9O3bB6SaXVyazhVQpMPEIMb+OM+ufyN3i7j+/mysEY4jE5eul/D91oGBwYMWkOmrmbOexkLkKFRQ=,iv:c24ntD0Ti2Z7JE5zW6ZWMtp0hU00UfyxtDRIA4Afy3s=,tag:WzI+3mvdyXOejykXo9ttRw==,type:comment]
+    #ENC[AES256_GCM,data:naH6CXk7FBQxu+5RRo7pmwSlM/Ucr5uxCxwqh9jqOHuI2nsWDp4DkVONJqQ=,iv:wXqPst/9PFzcpvNwVwFbjVIl77jZZOMnNeBiIj94UaM=,tag:b5pqpvyauvvyhwMMOLqhZQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:W+4KSnMVEikFB5zLpA==,iv:dKY+lrN/ym6ah8WfVxGuQbDlEn4VMqppZkS7Ya+tqbI=,tag:nEDtEERjHkvWmKNK9ZwAaA==,type:str]
+    #ENC[AES256_GCM,data:88Eq9jblrzTcAONzNgO79/mF4FHlCzV9BibG,iv:hShmG4vbSnV3oZI3WQg62iE1QefVAZIr2pyug+9iyDk=,tag:LMpWs+Aa+cIPrzpMKQ5rkQ==,type:comment]
+    #ENC[AES256_GCM,data:uFeB0g+JFSjhgVw30Y52StaHyJNrDJ8nsrrzLAB/+fFMccm3K62qXnIfCGmK44DFtBrMsiLCay0JD0AGWsWBL6Pbk1/eyKGjKWb/1CZH1IqDNyV8biaZ9mo=,iv:bMa//rj2C8zGEpA/dEGaBiBLna2CydehFhZh1GrVXYU=,tag:BjvtGZ/7KCMjaP+95OJtCw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:qXK2VlyJoYUxj3WnUZo=,iv:uv3xVF0X7ZP/Ugqqe6HK3JOEDDQNaawImOlA/GmXAiY=,tag:zpCCKoGGVf8xJig7XzC3qw==,type:str]
+    #ENC[AES256_GCM,data:95iVQj/z8E1aim6SbBIXd8TGT+T5uauOjJiY11M+bxd8yg==,iv:y2JHsaZhvIYiEBEad8SYeLBcl6mmc6CppIPdMcNyq34=,tag:EBfqI86NPAcGc6094qc98g==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:r88Qbu5sC7Emd5IBtw==,iv:lOffm+XgGgjfBhBnZaiDNub5L3CjBRh43D46oCCCFQA=,tag:0KU8R7kJS+5Eil1prMtPOg==,type:str]
+    #ENC[AES256_GCM,data:71UVQjFspKetSO6EdjyW4BQs1cheJFgABVLFPA0oniHL2gDS6LHdiCXhjPVjwJs=,iv:UJyQ4YjfvSOnefBR0z+m0lj/C6Ih9U2HaotkWEEwOuc=,tag:UIREfQPOpcRUvzlOyWtK7A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:ULwUNoy6M8YxM8OTteZB61qYUzBTx6GZmq313zNguw==,iv:uPIOP+tFtgy3SzCrBprL/jYLffhiDgtqHmmTOIp9SSA=,tag:vsJKuR9mrLn/DgAoE0knQQ==,type:str]
+    #ENC[AES256_GCM,data:Y6WWNVaPihktXTVJ8t4hbL3CSwSZMyQOIHHLeD8iPV8Hrwb91ESD8TTkv/w0TcdS8QVnQ1rkhRj7dDJ1IM9Z2hGbgWE26aF2cPYN5sxBEmNZ9w==,iv:UjNHLi+EmF0rrI10lKc8ZwERm/UhE/BqQRW1p3wXlss=,tag:pSHGYjO4gZFBrEPuNruVKA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:jbGr9mJttVqmSIDhOcZH,iv:ONYdtoY/LAFA8l25jC/tYTfLnBk3wnIS0cn5XTNAUCA=,tag:e70Qjrwd24UjpNM1ZkqTzA==,type:str]
+    #ENC[AES256_GCM,data:jgTqwORKFODJZSpM7Kchb8SvbalDd4Qkd/7krrO92iD3,iv:70UuWG7FTT3gajgnK7Nl0EELDoa8ocen23h4RopJs4c=,tag:XgQ8J6iO8i71KSg86qe2Cg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:z1/HvaFD1OcBB9HvKxbZ,iv:zsWpSyavLvGBUULR9sUIwRvgJ6+DH+CyXr9qoF7T7B0=,tag:nR4oVzwIKUyefJxgH6+Afg==,type:str]
+    #ENC[AES256_GCM,data:SeDjIdI2kEQpf4CfaUF1WZJT8DrO4ie/DYfZfFmnoSHAK+VvqQJjGJzYue/V2+Q9NF0PkilEzdZkjVuE2nnCJj8nxmS9tnRpK1A9woMyjFk=,iv:8qRTNLqc0aRE308tUpe6n8ZmXfb2B6IShHk8ymhRFwc=,tag:qT1tauB/Vh/ENIoy4ShvSA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:/+JmHmnAne7kiWtvxXdY,iv:3EIzLkgHblFdTOWy2dGHJyR2MGPlIknGjYQGm8AoSEc=,tag:phxfH/IxfDvBEkJqInf+kg==,type:str]
+    #ENC[AES256_GCM,data:hdXzeXipIsgRsfws57/rCFX0HTvUE/hWqYeYj+nDTsUlVagaBlVMSlWVWx2gMYrIx87JciBz7TjQx35nOkUIukC5uumoGzFJhjgKiq+oAHZWg2S10yJC,iv:LJBKwQmBNp3uVmx7NOFOunH9D0RjqT2Quj0j2vtCxn8=,tag:QqT3N2ySKBPxkAXuvFI7KA==,type:comment]
+    #ENC[AES256_GCM,data:1W/Ema35skgSQCq6eU/Cc16z2QNEjGRtQpXWlT0S4fxsbUREhgCeR18crNRqWodxAIxC6IdF77MWi1lI4SSnp4v9vuL8MoAUa5wm8iPKqbXjLJElNbDFEmgBGOuXhhT4gixE3nLnmWe/7pGgIbQNAx99wGdxPqNnWW/3dQ==,iv:53zFv14PEQuJe3wQL6Tt/gaW9NcOMOEpaxo7WBS5Mw0=,tag:edLPQMwvIWfBRtj7aiKx2w==,type:comment]
+    #ENC[AES256_GCM,data:S3TT9E/OYt8rKK9CN6CpwSjfbVpwMi4E7X9wSg3VUKkwg/RK3jFK2jyYUdSnWkOguyd2CyKisoP2CAuTwcnYqFkD477n1Tw6rPHgY4+m9nQ=,iv:eCB0WSEjtLms8zdprWcBcOuX+dJNxpPyH6OOEE2vJ14=,tag:7fox5rf36HUzFsSMJAmVdQ==,type:comment]
+    #ENC[AES256_GCM,data:F1Mw3pWttTfddXl/7Bt4srkOlbiGW+17jlFwUuJUfnIfDDakHoSyZrsWpvUrYrXsQAqHgRYE,iv:z7RJ53LPQHfZNJoeMRTrIktar1ArgEceOmdRI3k+IC4=,tag:7XU5IoEBQ3n996ygaZkpzQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:ZJbyHYVMIOnzu1VS,iv:R4BP83+24LN21ze/xBIEmw7xsOiCewAGRN4JT/xIRnU=,tag:T7f2TdPum4MA7IN3jxuDzQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3inUmpxMK5guaXOj1OPEH40=,iv:I85WVwdPMEyW+rsLAPha0Tyin0gJl9ufrx0kCdb0J6U=,tag:YGJV8wComwctp5YGUPfBxw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:CsKh3907AM5LI7sX4Na2vXIc3lU+nTTqa6rfm0ZqLIA=,iv:ew/oXPw2k49YZ4nzlHUm73x/sQy5WZPxrxtoWCCqIbs=,tag:AVW93vOtz5u3uI8IrVApVQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:++ku76iFfRkI0MkUGVPHgoIHOm4HMfJt6kFp1yOo/yO5sCGbPnSFbg==,iv:pVd7Dnkd3AuJUSHlW9QZ12iNw5zOdBaS0pqwd13kkKM=,tag:0cAFVTYOHxMS30WZ7jNoDA==,type:str]
+    #ENC[AES256_GCM,data:wCFLwCgkFR9ThdTyoEfllzPLsTu8mRZhiNYcDzrtlgQngddNPnD0iKD+ZITzXtA8thINaSbq0P4Mcu+gQPAvGw==,iv:LKRzIXfMzJlQWbVkLNKkjQ3y8nsz1YDxIy9T1FwoU2g=,tag:L1M79HBwEQSicS2EbgoL2Q==,type:comment]
+    #ENC[AES256_GCM,data:7W4lppHaoosWVorq2pe1Bm67UfmYX+Z7e3u0ONpi8rxyg0JvTs4sy5cCAF/Wps6lKP6+dy42Ttw=,iv:Od6ec4Fb4LnFNaPvoNssXJIbk6VrW9iWTZHf7/D5pqI=,tag:EYL6foXr4do2F1z75/A6mA==,type:comment]
+    #ENC[AES256_GCM,data:h8uBnQ+kO/PjvTsDrNO72Ft58y5RC1IlnQ==,iv:BD3JrSX6C5a/Z2n4Q96/mdhiRPysxZqg702la8i7WJ4=,tag:0UTX3XGeVpht0Q9OJ0Jz2A==,type:comment]
+    #ENC[AES256_GCM,data:VG6liEv9O0NlPD0Ki8M0tta3DRDcNvAEMqaJk1RDEWJC/HHVwQ9oyAAbcKMvdSGV2tOGA5ZXes/XsMoOyaHvcfojIa96/vw7S9UmL0c=,iv:I5ABJQ9eNlCSTqiykjGR2bR3Mua9amKvn8YzuJiNo5A=,tag:KTdxNGGTvlVAvEDAGwcuuw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ug7g5x3ytJ/9hIhBLbnhQXEYBwfRELOg28EpRz2QMUvpMUYebyNVkwKgp9aKtNWG,iv:nwTVQJX9FotM6cKsz4s9u70PObdzcBcAa8tgAjdcedI=,tag:NddfZ2vvDVttKLNYFTMhRg==,type:str]
+    #ENC[AES256_GCM,data:ygEcck/Lbb73OER/SJHwt/fqnj/ZUloRWZTCNV3v4IxsGOWzO3NVHdIXnHfiDmlxKQOauHWQ1cqsvYro9rD+bZ9CUFEgeTo=,iv:YOycTpjVbAfcC/dISKzDPtI89jgoKWno9goUaK40lfg=,tag:UnL801YGrjMrJM3+GmFP3w==,type:comment]
+    #ENC[AES256_GCM,data:OBqaXOz6Bz8lkw8TAfl9UHK5W1Ztsz43pLO8Qk2ynm8RiUYqjwPND82J4ijNpM+lITXXXXOg,iv:uQc+mZ/iH7bGUn0yp7/DcZRRCkO/Iyc5K5EVigRn3IU=,tag:s5RnhgANkLOGUDVWLLU5Iw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:FIGebiQB8w==,iv:2WCmXDjPOzU2KJOU1AeGhJ4B8Dx37LVdwt/cEmuazY0=,tag:czi00WvA6vPk3fl3pXO2xg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rGQp5W98ttZ9eZ6HExBBkhXySys=,iv:nLc9VX6jP7uV9ZrHodM38dxmrl1Hm8YieU0MzF+ZoM8=,tag:UQT7tYR9WRCmJ9NLfpWjAQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:1Lu9PF6LC5onYGg=,iv:t9GDizzye+k16j5yyTBP1rm5k2KMp7rIVtEy1GrWnTk=,tag:0z7qY2NsWw2u+8v6Q/NQxg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:nEeX6hXJs0u+LHaqaqCl,iv:5y98MhyNRc+2BxD+utY8baPY9utHu3YmL1Rq14xT+Ko=,tag:NSBI94X6Am4w/MV0iOzIyg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lInpzNQOQDZF1rzeTTgZMM/mP/E71oUKew==,iv:7HcKiL9NwgWvOgpTDwK6UdI3KkenT9ED4lkTbMwMFEc=,tag:cRq9yQYHwflaNden24NvaA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:o978x6rkjo3KtzbpBnK8/mwAZrrdueRM8T3/PWLeDQ==,iv:FiL45wGPTujB5oqarWK2AvbOQcVcKP+B0sXSVkDJmvU=,tag:h4+jqqWG7KLvj9uRcHvc1w==,type:str]
+    #ENC[AES256_GCM,data:+KXEXfpo/6O1ZqOWdJ/QVR9nqKot/PKD5PeFswwnQjy/WPWQm9o=,iv:pJ+cfNS8493Yo/OFvabt20obLYIIVGTP7ma/24x1J08=,tag:KT1s0HDaN3skdcG6XTaABg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:VJu3Xa2l5uP6g8lYt7VwAgAH4OI=,iv:d83QjOHOmLM7v0VAxPRqXION9v3G+QOv22muZ9ZZKwU=,tag:fjsUL/98hVTBmkF4ZD95dQ==,type:str]
+    #ENC[AES256_GCM,data:vojvbbH5kwOndJ86z6k=,iv:kIg9LX33pyZ9+DlvCyS3sYor7l0YdWe+MjQUldiSqIk=,tag:HyUTnwQdKH7wWobZXBY3hg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:uKRtgjrkkEzPjohnNA==,iv:/gRGrnsSH2bmqzoPJr+D4tv8nRir+aPRgNA9URXWWto=,tag:FfpRjyVreYBkG7ggRb36Ig==,type:str]
+    SVCNET: ENC[AES256_GCM,data:jsdakuXA8/upYazfzQ==,iv:xnfNO3FiZ4bZzzVi+J6ZQ8djUXFxtKZKTgCED3+rTCs=,tag:pJhOSvatzykAkGeKLcIr7g==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:4BVu1A==,iv:r5xLKLFSLOLlvg6VPnvtmVxeR7Y8el4EDuaJ0/ji9QM=,tag:2SxBJ6Os3YD3atLQ7gN/hg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1TXZSWTl4SHc1SUR1cy9H
-            NzUya1l0Tm91Tk9GTHdKV2ZPL2ZmdmE3T2hzCmliK29CQURnRkU3YTBhbkdVWWZy
-            cWlvL1F4UzdoZGJUa2VYaWtpb3lFZU0KLS0tIG1aVnJISEwyMzlCMFFhUld2NEZy
-            VUJsdnM3QkgvcEg2Z0x1NXk5bFhmdVEKSU4LdukahyaxVQFoHejUuUiSSwuYlYo1
-            KWG3jWyyKeadV3GOApvaKg7OOoe6mfjPyXFPBFSi9/fMBKf09A5mVw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxK2RJZlNNbGdJeWtQZHN4
+            eDVmWEhLcEpOcTdld1A3TjJjSFFaZ0pCUkVvCnNic241TkRvMGlkM0lXYStITXBI
+            V1l3UXpleVNwNjZRdG0wY2Y3MDFRL1kKLS0tIGVkcXdVcVUxTyttVzYzZVJhQkRp
+            S2xRSDhrRG80dWlaK1JvRWRLVUMySkUKeta+2FkMhljgjlCnU2kzwv3XNj46fHxU
+            0FhfJoqPgazqumsTdPOi8Evc/RaDsASe8iCtHkRRq3AVI7F40Aovmw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-29T21:53:36Z"
-    mac: ENC[AES256_GCM,data:u4wr2LRDHgIUX7Lsv8ctirIPSSawM8QNzvh7C/gH+F/bo1NVaxVawbbzNaxfMzjH6VQUUlLmZbSlrlbY4pxTtLE8OsokCEjaiE5MgzQx7XnyFZpIvXhoCcq7FDh5WN6vEUrL+bbOgWc1TaTxY0CUSr2kgxVIDX3gSEiRTpkTBbs=,iv:HX+mBUu0vJUnKzHcFadVXS3bGDZHJVNvEVngkk2KSc4=,tag:1yjCjTIZaV6uncBrAwUHLg==,type:str]
+    lastmodified: "2025-03-29T22:02:25Z"
+    mac: ENC[AES256_GCM,data:II6hyiBiuSA8NtbexpdWutJMtzcYAmdb+pILbdyh7lZpMMDzDv1aEPryFFcLwLIPe285MEI+w4HvwxFLagmZFLh4LusjykoQenwO2qlL8M7kRgUt14Db0Y72BXboMAdgchR1NWfkab+pdKxtm9o52IC1HThPJWNp0dJPF3ljMn0=,iv:Y/AWHUAo5V94f9Ma9EMLMUwxFHmycztTb5m9ZATMGic=,tag:4SufjkZ+MgGsl9gJ0zCNlg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.4
